# BaseballCV

./: .gitattributes  .gitignore  LICENSE  LICENSE-MLB-AGPL.txt  README.md  packages.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: RELEASE_TEMPLATE.md  codecov.yml  release.yml
.github/workflows/: build.yml  discord_package.yml  discord_pr.yml  pypi-publish.yml  pytest.yml
baseballcv/: README.md  __init__.py
baseballcv/datasets/: README.md  __init__.py
baseballcv/functions/: README.md  __init__.py  baseball_tools.py  dataset_tools.py  glove_framing_tracker.py  load_tools.py  new_scraper.py  savant_scraper.py
baseballcv/model/: README.md  __init__.py
baseballcv/models/: README.md
baseballcv/utilities/: __init__.py
baseballcv/utils/: __init__.py  git_dependency_installer.py
datasets/COCO/: README.md  baseball_rubber_home_COCO.txt  baseball_rubber_home_glove_COCO.txt
datasets/JSONL/: amateur_hitter_pitcher_jsonl.txt
datasets/raw_photos/: README.md  broadcast_10k_frames.txt  broadcast_15k_frames.txt
datasets/yolo/: OKD_NOKD.txt  README.md  amateur_pitcher_hitter.txt  baseball.txt  baseball_rubber_home.txt  baseball_rubber_home_glove.txt  phc.txt  test_dataset.txt
demos/tracking/: tracking.py
development/: new_savan_scraper.py  new_savant_scraper.py
docs/: CNAME  Gemfile  _config.yml  index.md
docs/_includes/: breadcrumbs.html  custom_scripts.html  footer.html  header.html  navigation.html  page_header.html  search.html  search_input.html
docs/_layouts/: default.html
docs/additional-resources/: index.md
docs/appendices/: index.md
docs/background-theory/: implementation.md  index.md
docs/best-practices/: index.md
docs/contributing/: index.md
docs/datasets/: index.md
docs/faq/: index.md
docs/getting-started/: index.md  troubleshooting.md
docs/introduction/: index.md  overview.md
docs/package-docs/: technical-reference.md
docs/repository-structure/: index.md
docs/using-repository/: custom-pipelines.md  florence2-training.md  index.md  training-pipeline.md  yolov9-usage.md
models/: README.md
notebooks/: CommandAnalyzer.ipynb  DETR_example.ipynb  Florence_2_example.ipynb  Glove_tracking.ipynb  PaliGemma2.ipynb  README.md  autolabeling_semisupervised.ipynb  ball_inference_YOLOv9.ipynb  glove_framing_tracking.ipynb  glove_tracker_notebook.ipynb  intended_target_example.ipynb  model_fine_tuning.ipynb  okd_nokd_classifier.ipynb  using_dtz_tool.ipynb
scripts/: README.md  __init__.py  dataset_tools.py  generate_photos.py  load_model.py  load_tools.py  savant_scraper.py
scripts/function_utils/: __init__.py  savant_scraper.py  utils.py
scripts/model_classes/: README.md  (+6 more)
streamlit/: README.md
tests/: README.md  __init__.py  conftest.py  test_baseball_tools.py  test_baseballcv_api.py  test_dataset_tools.py  test_generate_photos.py  test_imports.py  test_load_tools.py  test_paligemma2.py  test_savant_scraper.py  test_utils.py
(+194 files in other folders)
