[build-system]
requires = ["poetry-core==2.1.2"]
build-backend = "poetry.core.masonry.api"

[project]
name = "baseballcv"
version = "0.1.22"
authors = [
    { name="Dylan Drummey", email="dylandrummey22@gmail.com" },
    { name="Carlos Marcano", email="c.marcano@balldatalab.com" }
]
description = "A collection of tools and models designed to aid in the use of Computer Vision in baseball."
readme = "README.md"
requires-python = ">=3.9, !=3.9.7, <4.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/dylandru/BaseballCV"
"Bug Tracker" = "https://github.com/dylandru/BaseballCV/issues"
Documentation = "https://baseballcv.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["baseballcv*"]

[tool.poetry.dependencies]
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
pandas = "^2.2.3"
polars = "^1.27.1"
huggingface-hub = "^0.30.2"
datasets = "3.4.0"
ultralytics = "^8.3.116"
autodistill = "0.1.29"
autodistill-grounded-sam = "0.1.2"
mediapipe = "0.10.21"
# Adding dev version to prevent numpy dependency conflict. Make sure to install 0.26.0 when released
supervision = "0.26.0rc7" 
coco-eval = "0.0.4"
pytorch-lightning = "2.5.0"
rfdetr = "1.0.8"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
streamlit = "^1.44.1"
streamlit-image-coordinates = "^0.2.1"
streamlit-drawable-canvas = "^0.9.3"


[tool.poetry.group.extras.dependencies]
yolov9 = {git = "https://github.com/dylandru/yolov9.git"}
